수정기능 만들기3(method-override, MongoDB 수정문법 추가

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -11,7 +11,7 @@
 
     <%- include('nav.ejs') %>
 
-    <form action="/edit" method="post" class="form-box">
+    <form class="form-box" action="/edit?_method=PUT" method="post">
         <h4>글 수정함</h4>
         <input name="id" value="<%= postData._id %>" style="display: none;">
         <input name="title" value="<%= postData.title %>" placeholder="title">
