--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -13,8 +13,9 @@
     <%- include('nav.ejs') %>
 
     <div class="detail-bg">
-        <h4><%= detail.title %></h4>
+        <h4><%= detail.title %><div class="underline"></div></h4>
         <p><%= detail.content %></p>
+        <a class="btn btn-primary mt-3" href="/list">List</a>
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
