--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -12,9 +12,8 @@
     <%- include('nav.ejs') %>
 
     <div class="detail-bg">
-        <h4><%= detail.title %><div class="underline"></div></h4>
-        <p><%= detail.content %></p>
-        <a class="btn btn-primary mt-3" href="/list">List</a>
+        <h4>Welcome My Page!</h4>
+        <p>Your ID : <%= result.username %></p>
     </div> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
