--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,14 @@
         <input name="username" placeholder="Id">
         <input name="password" placeholder="PW" type="password">
         <button type="submit">로그인</button>
-    </form> 
+    </form>
+
+    <form action="/signup" method="post" class="form-box">
+        <h4>회원가입</h4>
+        <input name="username" placeholder="Id">
+        <input name="password" placeholder="PW" type="password">
+        <button type="submit">가입하기</button>
+    </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
