회원가입 관련 기능 작업완료

--- a/public/main.css
+++ b/public/main.css
@@ -85,3 +85,11 @@ div {
 .pagination-box > * {
   margin: 0 3px;
 }
+
+.active-agree {
+  color: lightgreen;
+}
+
+.active-none {
+  color: lightcoral;
+}
