이미지 업로드하기 작업완료

--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -15,6 +15,7 @@
     <div class="detail-bg">
         <h4><%= detail.title %><div class="underline"></div></h4>
         <p><%= detail.content %></p>
+        <img src="<%= detail.img %>" style="display: block;" width="20%">
         <a class="btn btn-primary mt-3" href="/list">List</a>
     </div> 
 
