--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="/">Home</a>
-        <a class="nav-link" href="/list">List</a>
+        <a class="nav-link" href="/list/1">List</a>
         <a class="nav-link" href="/write">Write</a>
       </div>
     </div>
